# CEIA_Analisis_de_datos

./: .gitignore  README.md  environment.yml  environment_bonus.yml  environment_c8.yml  pyproject.toml
datasets/: carreras_24_1_dtypes.json  carreras_24_2_dtypes.json  carreras_24_after_eda.parquet  carreras_24_dtypes.json  datos.csv  f1_2024_Q.csv  f1_2024_S.csv  landsat_sample.tif  movie.sqlite  pistas.csv  quality_of_life.csv  result_qualy.csv  titanc_magia_pycaret.csv  turismo.csv
notebooks/: best_pipeline.pkl  clase_01_introduccion.ipynb  clase_02_analisis _faltantes_outliers.ipynb  clase_02_caso_practico.ipynb  clase_02_correlacion.ipynb  clase_02_intro_EDA.ipynb  clase_02_intro_EDA_Titanic.ipynb  clase_02_visualizacion.ipynb  clase_03_1_outliers.ipynb  clase_03_2_codificacion.ipynb  clase_03_3_discretizacion.ipynb  clase_03_4_desbalance.ipynb  clase_03_5_normalizacion_estandarizacion.ipynb  clase_03_EDA_ejemplo_SMN.ipynb  clase_03_analisis _faltantes_outliers.ipynb  clase_03_datos_faltantes.ipynb  clase_03_medidas_asociacion.ipynb  clase_03_outliers.ipynb  clase_03_repaso_practico_1.ipynb  clase_03_taller1_resuelta.ipynb  clase_03_taller_parte_1_EDA.ipynb  clase_03_variables_categoricas.ipynb  clase_04_codificacion.ipynb  clase_04_desbalance.ipynb  clase_04_discretizacion.ipynb  clase_04_normalizacion_estandarizacion.ipynb  clase_04_nuevos_features.ipynb  clase_04_split_y_desbalance.ipynb  clase_04_split_y_stratify.ipynb  clase_04_tests_inferenciales.ipynb  clase_04_tratamiento_datos_faltantes.ipynb  clase_04_tratamiento_outliers.ipynb  clase_05_codificacion.ipynb  clase_05_desbalance.ipynb  clase_05_discretizacion.ipynb  clase_05_normalizacion_estandarizacion.ipynb  clase_05_reduccion_de_dimensionalidad.ipynb  clase_05_taller_parte_1.ipynb  clase_05_taller_parte_1_EDA.ipynb  clase_05_taller_parte_1_faltantes_outliers.ipynb  (+34 more)
recursos/: bibliografia-recomendada.md  clase_01_ejercicio.ipynb  clase_02_ejercicio.ipynb  (+22 more)
(+28 files in other folders)
