[project]
name = "ceia-analisis-de-datos"
version = "0.1.0"
description = ""
authors = [{name = "Ariadna Garmendia"}]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    #"pandas (>=2.2.3,<3.0.0)",
    "pandas (>=2.1.4,<2.2.0)",
    "ydata-profiling (>=4.12.2,<5.0.0)",
    "matplotlib (>=3.7.0,<4.0.0)",
    #"matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    #"scipy (>=1.15.2,<2.0.0)",
    "scipy (>=1.6.1,<=1.11.4)",
    "numpy (>1.26.3 ,<=1.26.4)",
    "scikit-learn (>=0.24,<1.5.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "h11 (>=0.16.0)",
    "Jinja2 (>=3.1.6)",
    "missingno (>=0.5.2,<0.6.0)",
    "imblearn (>=0.0,<0.1)",
    "librosa (>=0.11.0,<0.12.0)",
    "sweetviz (>=2.3.1,<3.0.0)",
    "category-encoders (>=2.6.0,<3.0.0)",
    "kaleido (==0.2.1)",
    "pycaret (>=3.3.2,<4.0.0)",
    "tensorflow (>=2.19.0,<3.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "rasterio (>=1.4.3,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
